tests/paczka1/small_fuzzy/39174923.err
Error in line 4: qvbg S198 29,7
Error in line 6: S779 S779 26,2
Error in line 11: Z4nA2ooV1Cp A133 6,0
